# policy-iteration-on-gpu

./: .gitignore  README.md  compare_results.py  comparison_results.md  mdp_results.txt
comparator/: comparator_script.sh
cuda-code/: CMakeLists.txt  json_reader.h  main.cu
grid-world-generation/: .gitignore  CMakeLists.txt  controlled.cc  controlled.h  grid_gen.cc  grid_gen.h  io.cc  io.h  main.cc  main.h  mdp.cc  mdp.h  policy.csv  policy_improvement_sparse.cc  policy_improvement_sparse.h  policy_iteration.cc  policy_iteration.h  random_mdp.cc  random_mdp.h  test_grid_world_generation.py  value.csv
grid-world-generation/data-gen-orchestration/: .gitignore  grid_world_generation.py
grid-world-generation/data-gen-orchestration/datasets/: manifest.csv
grid-world-generation/tests/: grid_world_format_test.cpp  grid_world_test.cpp
impr-cuda/: CMakeLists.txt  Doxyfile  json_reader.cpp  main.cu
serial-version/: CMakeLists.txt  README.md  json_reader.cc  json_reader.h  main.cc  main.h  sparse_policy_iteration.cc  sparse_policy_iteration.h  writer.cc  writer.h
serial-version/tests/: policy_evaluation_test.cc  policy_improvement_test.cc  policy_iteration_test.cc  reader_test.cc
